--- a/.gitignore
+++ b/.gitignore
@@ -8,17 +8,14 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-env/
-build/
-develop-eggs/
 dist/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
-var/
 *.egg-info/
 .installed.cfg
 *.egg
+
+.pytest_cache
+.tox
