--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - 3.6
 install:
   - pip install -U setuptools
+  - pip install -r requirements.txt
   - pip install tox-travis
 script:
   tox
